--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "os-portfolio",
+	"name": "mp-lab",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -18,9 +18,11 @@
 		"node-sass": "^7.0.1",
 		"react": "^18.1.0",
 		"react-bootstrap": "^2.3.0",
+		"react-d3-tree": "^3.3.4",
 		"react-dom": "^18.1.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "^5.0.1",
+		"react-tree-graph": "^7.0.3",
 		"typescript": "^4.8.3",
 		"uuid": "^8.3.2",
 		"web-vitals": "^2.1.4"
