--- a/package.json
+++ b/package.json
@@ -19,18 +19,14 @@
 		"react": "^18.1.0",
 		"react-bootstrap": "^2.3.0",
 		"react-dom": "^18.1.0",
-		"react-router-dom": "^6.3.0",
 		"react-scripts": "^5.0.1",
-		"typescript": "^4.8.3",
-		"uuid": "^8.3.2",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"eject": "react-scripts eject",
-		"test:nowatch": "react-scripts test --watchAll=false",
-		"tsc:w": "tsc -w"
+		"test:nowatch": "react-scripts test --watchAll=false"
 	},
 	"eslintConfig": {
 		"extends": [
